--- a/sima-ahmadi.github.io-main/index.html
+++ b/sima-ahmadi.github.io-main/index.html
@@ -25,26 +25,26 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Moein Sarvi</h1>
-                <h3 class="tagline">Full Stack Developer</h3>
+                <h1 class="name">sima ahmadi</h1>
+                <h3 class="tagline">Camputer Engineer</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa-solid fa-envelope"></i><a href="mailto: moein.serpico@gmail.com">moein.serpico@gmail.com</a></li>
-                    <li class="phone"><i class="fa-solid fa-phone"></i><a href="tel:09135551231">09135551231</a></li>
+                    <li class="email"><i class="fa-solid fa-envelope"></i><a href="mailto: simaahmadi@gmail.com">simaahmadi@gmail.com</a></li>
+                    <li class="phone"><i class="fa-solid fa-phone"></i><a href="tel:09217178565">09217178565</a></li>
                     <li class="website"><i class="fa-solid fa-globe"></i><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/" target="_blank">portfoliosite.com</a></li>
-                    <li class="linkedin"><i class="fa-brands fa-linkedin-in"></i><a href="#" target="_blank">linkedin.com/in/moeinsarvi</a></li>
-                    <li class="github"><i class="fa-brands fa-github"></i><a href="#" target="_blank">github.com/amir2041</a></li>
-                    <li class="twitter"><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/moeinsarvi1" target="_blank">@moeinsarvi1</a></li>
+                    <li class="linkedin"><i class="fa-brands fa-linkedin-in"></i><a href="#" target="_blank">linkedin.com/in/simaahmadi</a></li>
+                    <li class="github"><i class="fa-brands fa-github"></i><a href="#" target="_blank">github.com/simaahmadi</a></li>
+                    <li class="twitter"><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/simaahmadi" target="_blank">@simaahmadi</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Education</h2>
+                <h2 class="container-block-title">طراحی سایت</h2>
                 <div class="item">
-                    <h4 class="degree">MSc in Computer Science</h4>
-                    <h5 class="meta">University of London</h5>
-	                    <div class="time">2016 - 2018</div>
+                    <h4 class="degree">طراحی سایت با وردپرس</h4>
+                    <h5 class="meta">دانشگاه فدک</h5>
+	                    <div class="time">1379 - 1402</div>
                 </div><!--//item-->
                 <div class="item">
                     <h4 class="degree">BSc in Applied Mathematics</h4>
